.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Activity_Outcome__c.object
<CustomObject>
    <description>Junction object that supports many-to-many relationship between Activity and Outcome</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Code__c</fullName>
        <formula>Incap311__Activity__r.Incap311__Activity_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Name__c</fullName>
        <formula>Incap311__Activity__r.Incap311__Activity_Name__c</formula>
        <label>Activity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Outcome_Code__c</fullName>
        <formula>Incap311__Service_Type_Version_Activity__r.Incap311__Activity_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Outcome Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity__c</fullName>
        <description>Activity to which this activity outcome is valid</description>
        <label>Activity</label>
        <referenceTo>Incap311__Activity__c</referenceTo>
        <relationshipLabel>Activity Outcomes</relationshipLabel>
        <relationshipName>Activity_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Additional_Comments_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requires additional comments to be entered when this outcome is selected</description>
        <label>Additional Comments Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Default_Owner__c</fullName>
        <label>Default Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Internal_Comments_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requires internal comments when this activity outcome is selected</description>
        <label>Internal Comments Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Makes this the default outcome for this acitivity</description>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Next_Activity__c</fullName>
        <description>The activity code the for the next activity after this outcome was selected</description>
        <label>Next Activity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Order__c</fullName>
        <description>Order this outcome to show up in the drop down list</description>
        <label>Order</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Closure_Reason__c</fullName>
        <description>Long form text that give a definition of why the activity is closed when this is selected</description>
        <label>Outcome Closure Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Code__c</fullName>
        <formula>Incap311__Outcome__r.Incap311__Outcome_Code__c</formula>
        <label>Outcome Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Detail__c</fullName>
        <formula>Incap311__Outcome__r.Incap311__Outcome_Detail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Name__c</fullName>
        <formula>Incap311__Outcome__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Service_Reason__c</fullName>
        <label>Outcome Service Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Incap311__Service_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incap311__Outcome__c</fullName>
        <description>Outcome that this activity outcome is selected for</description>
        <label>Outcome</label>
        <referenceTo>Incap311__Outcome__c</referenceTo>
        <relationshipLabel>Activity Outcomes</relationshipLabel>
        <relationshipName>Activity_Outcomes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Owner_Not_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner Not Editable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version_Activity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Type Version Activity</label>
        <referenceTo>Incap311__Service_Type_Version_Activity__c</referenceTo>
        <relationshipLabel>Activity Outcomes</relationshipLabel>
        <relationshipName>Service_Type_Version_Activity_Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Track_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a Case Event should be created when this Activity Outcome is used.</description>
        <label>Track Use</label>
        <type>Checkbox</type>
    </fields>
    <label>Activity Outcome</label>
    <nameField>
        <label>Activity Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>